# deeplearning-pytorch-textbook

./: .gitignore  01-04 pandas, numpy, matplotlib.ipynb  01-05 데이터의 분리.ipynb  02 파이토치 기초.ipynb  03-01 선형 회귀와 자동 미분.ipynb  03-02 다중 선형 회귀.ipynb  03-03 nn.Module과 클래스로 구현하기.ipynb  03-04 미니 배치와 데이터로더.ipynb  03-05 벡터와 행렬 연산 복습하기.ipynb  04-01 로지스틱 회귀.ipynb  04-02 nn.Module과 클래스로 구현하는 로지스틱 회귀.ipynb  05-01 원-핫 인코딩.ipynb  05-02 소프트맥스 회귀 이해하기.ipynb  05-03 소프트맥스 회귀 다양한 방법으로 구하기.ipynb  05-04 소프트맥스 회귀로 MNIST 데이터 분류하기.ipynb  06-01 머신 러닝 기본 개념 정리하기.ipynb  06-02 퍼셉트론.ipynb  06-03 XOR 문제 구현하기 - 단층 퍼셉트론과 다층 퍼셉트론.ipynb  06-04 역전파(BackPropagation).ipynb  06-05 다층 퍼셉트론으로 손글씨 분류하기.ipynb  06-06 다층 퍼셉트론으로 MNIST 분류하기.ipynb  06-07 과적합을 막는 방법들.ipynb  06-08 기울기 소실(Gradient Vanishing)과 폭주(Exploding).ipynb  07-01 순환 신경망(Recurrent Neural Network).ipynb  07-02 LSTM과 GRU.ipynb  07-03 문자 단위 RNN(Char RNN) - 실습 2개.ipynb  08-01 합성곱과 풀링(Convolution and Pooling).ipynb  08-02 CNN으로 MNIST 분류하기.ipynb  08-03 깊은 CNN으로 MNIST 분류하기.ipynb  09-01 토큰화(Tokenization).ipynb  09-02 텍스트 데이터의 정제와 정규화.ipynb  09-03 불용어(Stopwords).ipynb  09-04 정규 표현식.ipynb  09-05 딥러닝을 위한 자연어처리 전처리 실습.ipynb  10-01 언어 모델.ipynb  10-02 통계적 언어 모델과 N-gram 언어모델.ipynb  10-03 펄플렉시티.ipynb  11-01 단어의 표현 방법.ipynb  11-02 Bag of Words.ipynb  11-03 DTM과 TF-IDF 행렬.ipynb  (+18 more)
